--- a/src/app/shared/pf-btn/pf-btn.component.scss
+++ b/src/app/shared/pf-btn/pf-btn.component.scss
@@ -48,6 +48,12 @@ button {
         height: auto;
         width: auto;
     }
+
+    button{
+        &:hover{
+            transform: scale(1);
+        }
+    }
 }
 
 @media(max-width: 500px){
